# WiFiManager-IDF

./: CMakeLists.txt  Kconfig  README.md  sdkconfig  sdkconfig.old
assets/: index.html  style.css  wifi.html
components/wifimanager/assets/: wm.js
components/wifimanager/docs/: API.md  GETTING_STARTED.md
components/wifimanager/examples/advanced/: main.c
components/wifimanager/examples/custom_html/: README.md
components/wifimanager/include/: WiFiManager.h  WiFiManagerParameter.h  wm_config.h
components/wifimanager/src/: WiFiManager.cpp  WiFiManagerParameter.cpp  wm_internal.h  wm_scan.cpp  wm_state.cpp  wm_storage.cpp
examples/advanced/: README.md
examples/basic/: README.md  main.c
examples/non_blocking/: README.md  main.c
include/: WiFiManager.h
main/: CMakeLists.txt  main.cpp
src/: WiFiManager.cpp  wm_dns.cpp  wm_http.cpp
